--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "gnosis-safe-delegation-dapp",
+  "name": "bca-dapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@ethersproject/providers": "^5.4.3",
     "@gnosis.pm/safe-apps-web3-react": "^0.6.1",
     "@gnosis.pm/safe-react-components": "^0.7.0",
-    "@material-ui/core": "4.11.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +16,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/ledger-connector": "^6.1.9",
     "@web3-react/walletconnect-connector": "^6.2.4",
+    "moralis-admin-cli": "^2.1.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
